<resources>
    <string name="app_name" translatable="false">SeminarioA</string>
    <string name="nombre_usuario">Nameless One</string>
    <string name="Dashboard_titulo" translatable="false">QuotationShake</string>
    <string name="Dashboard_boton1">Get quotations</string>
    <string name="Dashboard_boton2">Favorite quotations</string>
    <string name="Dashboard_boton3">Settings</string>
    <string name="Dashboard_boton4">About</string>
    <string name="About_titulo">About</string>
    <string name="About_info">Quotation Shake by Adrian^2 2018</string>
    <string name="Quotation_titulo">Random Quotations</string>
    <string name="Favorite_titulo">Favorite Quotations</string>
    <string name="Settings_titulo">Settings</string>
    <string name="Settings_nombre">Name that identifies the user</string>
    <string name="Settings_nombre_insertar">Insert your name</string>
    <string name="Settings_lenguaje">Quotations that will be received in the selected language</string>
    <string name="Settings_radiogroup">Web requests will be performed using the selected HTTP method</string>
    <string name="Settings_radio1" translatable="false">GET</string>
    <string name="Settings_radio2">POST</string>
    <string name="Favourite_button1">Author info</string>
    <string name="Quotation_init_text">Hello  %1s!\nPress Refresh to get a new quotation</string>
    <string name="Quotation_sample_quotation">This is a sample quotation</string>
    <string name="Quotation_sample_author">This is a sample author</string>

    <string name="no_existe">Author is annonymous</string>
    <string name="message_builder">Are you sure that you want to delete this quotation?</string>
    <string name="message_builder_favourite">Are you sure that you want to delete ALL your favourite quotations?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="Add">Add</string>
    <string name="Refresh">Refresh</string>
    <string name="Delete">Clear All</string>

    <string name="English">English</string>
    <string name="Russian">Russian</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

</resources>
