<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <EditTextPreference
      android:title="@string/Settings_nombre"
      android:hint="@string/Settings_nombre_insertar"
      android:key="nombre_insertado"
      ></EditTextPreference>


    <PreferenceCategory>
      <ListPreference
          android:title="@string/Settings_lenguaje"
          android:entries="@array/lista_idioma"
          android:entryValues="@array/lista_idiomas_indice"
          android:key="idioma_insertado" />

      <ListPreference
          android:title="@string/Settings_radiogroup"
          android:entries="@array/lista_http"
          android:entryValues="@array/lista_idiomas_indice"
          android:key="http_insertado" />
    </PreferenceCategory>

  <PreferenceCategory>
    <ListPreference
        android:title="@string/Settings_lenguaje"
        android:entries="@array/BaseDeDatos"
        android:entryValues="@array/lista_idiomas_indice"
        android:key="BaseDeDatos" />
  </PreferenceCategory>


</PreferenceScreen>