<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admusan.seminarioa.Dashboard">

    <Button
        android:id="@+id/dashboard_boton1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Dashboard_boton1"
        android:onClick="dashboard_callback"
        android:background="@drawable/botones_dashboard"
        android:textColor="@color/color_dashboard"
        app:layout_constraintBottom_toTopOf="@+id/dashboard_boton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dashboard_boton2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Dashboard_boton2"
        android:onClick="dashboard_callback"
        android:background="@drawable/botones_dashboard"
        android:textColor="@color/color_dashboard"
        app:layout_constraintBottom_toTopOf="@+id/dashboard_boton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_boton1" />

    <Button
        android:id="@+id/dashboard_boton3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Dashboard_boton3"
        android:onClick="dashboard_callback"
        android:background="@drawable/botones_dashboard"
        android:textColor="@color/color_dashboard"
        app:layout_constraintBottom_toTopOf="@+id/dashboard_boton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_boton2" />

    <Button
        android:id="@+id/dashboard_boton4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Dashboard_boton4"
        android:onClick="dashboard_callback"
        android:background="@drawable/botones_dashboard"
        android:textColor="@color/color_dashboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_boton3" />
</android.support.constraint.ConstraintLayout>
